--- a/03-post-process/ms-content/ms-content.Rmd
+++ b/03-post-process/ms-content/ms-content.Rmd
@@ -19,6 +19,10 @@ params:
     value: TRUE
   surv_compare_fig:
     value: TRUE
+  apportion_compare_fig:
+    value: TRUE
+  corr_compare_fig:
+    value: TRUE
 header-includes:
   - \usepackage{sansmathfonts}
   - \usepackage{helvet}
@@ -131,6 +135,12 @@ apportion_compare_caption = "
   Small points show posterior means of year-specific realized values (jitter for visual effect only) and large points show the average across years.
 "
 
+corr_compare_caption = "
+  Correlation terms of the covariance matrices controlling process variability.
+  Posterior means of population pair-specific correlations are displayed as points, and the posterior of the average of the 6 pairs is summarized in black (thin lines are 95% CRIs, thick lines 50% CRIs, and cross marks are means).
+  Survival processes are denoted by $x \\to y$, where as transition processes are denoted by $\\Pr(x)$.
+  The correlation in survival processes representing the migration downstream and upstream through the mainstem (LGR $\\to$ BON and BON $\\to$ LGR, respectively) represent among-origin correlation, hence the lack of points.
+"
 ```
 
 ```{r beta-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(beta_caption), time_it = TRUE, eval = params$beta_fig}
@@ -908,6 +918,81 @@ axis_labels("Transition Probability (Non-Survival)")
 ```
 
 \newpage
+
+```{r corr-compare-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(corr_compare_caption), eval = params$corr_compare_fig}
+
+# get posterior summaries of the mean correlation across all pop pairs
+# for each process separately
+rho_params1 = match_params(post, "rho", type = "base_only")
+rho_params2 = match_params(post, "rho_.+_pr", type = "base_only")
+rho_params = rho_params1[!(rho_params1 %in% rho_params2)]
+
+# function to extract posterior summaries of the rho parameters for a given process
+f = function(p) {
+  x = rowMeans(post_subset(post, paste0("^", p, "["), matrix = TRUE))
+  c(mean = mean(x), sd = sd(x), quantile(x, c(0.025, 0.1, 0.25, 0.5, 0.75, 0.9, 0.975)))
+}
+
+# apply it and order
+rho_mean_out = t(sapply(rho_params, f))
+rho_mean_out = rho_mean_out[order(rho_mean_out[,"mean"]),]
+
+# assign names to the different rho parameters
+rho_labels = c(
+  "rho_Lphi_E_Pb" = "Egg \u2192 Parr",
+  "rho_Lphi_O0_O1" = "Ocean-0 \u2192 Ocean-1",
+  "rho_Lpsi_O1" = "Pr(Mature Age-3)",
+  "rho_Lpsi_O2" = "Pr(Mature Age-4)",
+  "rho_lDelta_L_Pb_Mb" = "\u0394 Mean Length",
+  "rho_Lphi_Mb_Ma" = "Smolt \u2192 LGR",
+  "rho_lL_Pb" = "Mean Parr Length",
+  "rho_Lphi_Pa_Mb" = "Parr \u2192 Smolt",
+  "rho_Lphi_Rb_Ra" = "BON \u2192 LGR",
+  "rho_Lpi" = "Pr(Fall Migrant)",
+  "rho_Lphi_Ma_O0" = "LGR \u2192 BON"
+)
+
+# set up empty plotting region
+mypar(mar = c(2.5,6,1,0.75), yaxs = "i", mfrow = c(1,1), oma = c(0,0,0,0), mgp = c(2,0.1,0), col.axis = "black", cex.axis = 0.75)
+mp = barplot(rho_mean_out[,"mean"], 
+             horiz = TRUE, xlim = c(-1,1),
+             names.arg = rho_labels[rownames(rho_mean_out)],
+             las = 1, col = "white", border = "white")
+usr = par("usr")
+
+box_upr = mp - rbind(diff(mp)/2, NA)
+box_lwr = mp + rbind(diff(mp)/2, NA)
+box_upr[nrow(box_upr),] = box_upr[nrow(box_upr)-1,] + diff(box_upr[1:2])
+box_lwr[nrow(box_lwr),] = box_lwr[nrow(box_upr)-1,] + diff(box_lwr[1:2])
+
+pop_rhos = function(param, at_mp) {
+  
+  # if the process is not one of the hydropower migration survival ones, do this
+  # those processes are correlated across origins, because all populations share the same values each year
+  if (!(param %in% c("rho_Lphi_Ma_O0", "rho_Lphi_Rb_Ra"))) {
+    x = post_summ(post, paste0(param, vcov_inds), probs = c(0.1, 0.25, 0.75, 0.9))
+    y = at_mp + runif(6, -0.3, 0.3)
+    points(y ~ x["mean",], pch = 21, col = solid_col, bg = tranp_col)
+  } 
+}
+abline(v = 0, lty = 1, lwd = 2, col = "grey")
+
+junk = sapply(1:nrow(mp), function(i) pop_rhos(rownames(rho_mean_out)[i], mp[i,]))
+segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 7, col = "white")
+segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = "white", lwd = 2)
+points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "white", lwd = 4)
+segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 6, col = "black")
+segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = "black")
+points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "black", lwd = 3)
+
+abline(h = mp + rbind(diff(mp)/2, NA), xpd = FALSE, col = "grey", lty = 2)
+# par(tcl = -7)
+# axis(side = 2, at = mp + rbind(diff(mp)/2, NA), col = "grey", line = NA, labels = FALSE, lty = 2)
+box(col = par("col.axis"))
+axis_labels(xlab = "Process Noise Correlation", xline = 1.25, outer = FALSE)
+```
+
+\clearpage
 
 ```{r time-table}
 # calculate times elapsed for each chunk
