--- a/03-post-process/ms-content/ms-content.Rmd
+++ b/03-post-process/ms-content/ms-content.Rmd
@@ -11,8 +11,10 @@ params:
     label: "Proportion of Posterior Samples to Retain?"
     value: 1
     input: numeric
+  include_sim_years:
+    value: FALSE
   beta_fig:
-    value: TRUE
+    value: FALSE
   relationship_fig:
     value: TRUE
   no_fall_fig:
@@ -22,6 +24,8 @@ params:
   apportion_compare_fig:
     value: TRUE
   corr_compare_fig:
+    value: TRUE
+  WUL_change_fig:
     value: TRUE
 header-includes:
   - \usepackage{sansmathfonts}
@@ -141,61 +145,158 @@ corr_compare_caption = "
   Survival processes are denoted by $x \\to y$, where as transition processes are denoted by $\\Pr(x)$.
   The correlation in survival processes representing the migration downstream and upstream through the mainstem (LGR $\\to$ BON and BON $\\to$ LGR, respectively) represent among-origin correlation, hence the lack of points.
 "
+
+WUL_change_fig_caption = "
+  Density-dependent survival relationships from egg (panels a-d) and parr (panels e-f) to smolt arriving at Lower Granite Dam (LGR) under current (solid lines) and increased (dashed lines) weighted usable habitat (WUL).
+  Egg $\\to$ LGR survival includes density effects that are both direct (e.g., egg survival varies as a function of egg density) and indirect (parr size varies as a function of egg density, and survival varies with size), whereas parr $\\to$ LGR survival includes only the indirect density effects.
+"
 ```
 
-```{r beta-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(beta_caption), time_it = TRUE, eval = params$beta_fig}
-# extract posterior summaries of the capacity parameters
-beta_ests = post_summ(post, "^beta[", probs = c(0.025, 0.1, 0.5, 0.9, 0.975))
+```{r compare-fn, eval = params$surv_compare_fig | params$apportion_compare_fig}
+pch = c(21, 23)
 
-# extract posterior samples of the slope parameter
-beta_per = post_subset(post, "lambda", TRUE)
+cex_main = 2.5
+cex_sub = 1.1
 
-# create a sequence of WUL values to predict capacity at
-wul_seq = seq(0, max(jags_data$wul) * 1.1, length = 30)
+solid_col = "grey40"
+tranp_col = alpha(solid_col, 0.25)
 
-# obtain the regression line for each posterior sample
-pred_beta = t(sapply(beta_per, function(slope) wul_seq * slope))
+f_horiz = function(ests1, ests2, lim, label) {
+  # prepare the first group of estimates
+  ests1 = ests1[-1,]; x1 = colMeans(ests1)
+  
+  # figure out the correct axis labels
+  if (ncol(ests1) == 4) tick_labels = pops else tick_labels = c("NOR", "HOR")
+  jitter = runif(nrow(ests1), -0.25, 0.25)
+  
+  if (is.null(ests2)) {
+    # empty barplot with correct dimensions
+    mp = barplot(x1, col = "white", border = "white", xlim = lim, ylim = c(ncol(ests1) + 0.5, 0.05), horiz = TRUE)
+    
+    # figure out location of jittered points
+    mp_all = t(sapply(1:nrow(ests1), function(i) mp))
+    mp_all = apply(mp_all, 2, function(x) x + jitter)
+    
+    # draw year-specific estimates
+    points(ests1, mp_all, col = solid_col, bg = tranp_col, pch = pch[1], cex = cex_sub)
+    
+    # draw year averages
+    points(x1, mp, pch = pch[1], col = "white", bg = "black", cex = cex_main, lwd = 1.5)
+    
+    # draw axis
+    omgp = par("mgp"); nmgp = omgp; nmgp[2] = 0.15
+    par(mgp = nmgp)
+    usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
+    segments(usr[1], usr[3], usr[1], usr[4], xpd = TRUE, col = par("col.axis"))
+    axis(side = 2, at = mp, labels = tick_labels, las = 1)
+    par(mgp = omgp)
+    
+  } else {
+    # prepare the second group of estimates if supplied
+    ests2 = ests2[-1,]; x2 = colMeans(ests2)
+    
+    # empty barplot with correct dimensions
+    mp = barplot(rbind(x1, x2), beside = TRUE, space = c(0.25,1), col = "white", border = "white", xlim = lim, ylim = c(ncol(ests1) * 3 + 1, 0.15), horiz = TRUE)
+    mp1 = mp[1,]; mp2 = mp[2,]
+    
+    # figure out location of jittered points
+    mp1_all = t(sapply(1:nrow(ests1), function(i) mp1))
+    mp1_all = apply(mp1_all, 2, function(x) x + jitter)
+    mp2_all = t(sapply(1:nrow(ests2), function(i) mp2))
+    mp2_all = apply(mp2_all, 2, function(x) x + jitter)
+    
+    # draw year-specific estimates
+    points(ests1, mp1_all, col = solid_col, bg = tranp_col, pch = pch[1], cex = cex_sub)
+    points(ests2, mp2_all, col = solid_col, bg = tranp_col, pch = pch[2], cex = cex_sub)
+    
+    # draw year averages
+    points(x1, mp1, pch = pch[1], cex = cex_main, bg = "black", col = "white", lwd = 1.5)
+    points(x2, mp2, pch = pch[2], cex = cex_main, bg = "black", col = "white", lwd = 1.5)
+    
+    # draw axis
+    omgp = par("mgp"); nmgp = omgp; nmgp[2] = 0.15
+    par(mgp = nmgp)
+    usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
+    segments(usr[1], usr[3], usr[1], usr[4], xpd = TRUE, col = par("col.axis"))
+    axis(side = 2, at = (mp1 + mp2)/2, labels = tick_labels, las = 1)
+    par(mpg = omgp)
+  }
+  
+  # draw panel label
+  panel_label(label, y_inp = ifelse(ncol(ests1) == 4, 0.05, 0.1), cex = 1.2)
+}
 
-# summarize posterior of regression line
-pred_beta_summ = apply(pred_beta, 2, function(x) c(mean = mean(x), quantile(x, c(0.025, 0.1, 0.5, 0.9, 0.975))))
+legend_f = function(title, grp1, grp2, loc = "topright") {
+  legend(loc, title = title, legend = c(grp1, grp2), pch = pch, pt.cex = 1.3, cex = 0.9, bty = "n",
+         text.col = par("col.axis"), col = "black", pt.bg = "black")
+}
+```
 
-# empty plot with correct labeling/dimensions
-mypar(mfrow = c(1,1), col.axis = "black")
-plot(1,1, type = "n", xlim = range(wul_seq),
-     # ylim = c(0, max(beta_ests["97.5%",], pred_beta_summ["97.5%",])),
-     ylim = c(0, 3000) * 1000,
-     xlab = "",
-     ylab = "", yaxt = "n")
+```{r surv-compare-fig, fig.width = 3.4, fig.height = 8, fig.cap = msdown::prep_caption(surv_compare_caption), time_it = TRUE, eval = params$surv_compare_fig}
 
-# draw prettier y-axis
-at_y = c(0, 1000, 2000, 3000) * 1000
-axis(side = 2, at = at_y, labels = at_y/1000)
-usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
+# extract the posterior means to plot
+phi_E_Pb = array_format(post_summ(post, sub_index("^phi_E_Pb[year,pop]", year = observable, pop = ".+"))["mean",])
+phi_Pa_Mb_fall = array_format(post_summ(post, sub_index("^phi_Pa_Mb[year,LH_type,pop]", year = observable, pop = ".+", LH_type = i_fall))["mean",])[,i_fall,]
+phi_Pa_Mb_spring = array_format(post_summ(post, sub_index("^phi_Pa_Mb[year,LH_type,pop]", year = observable, pop = ".+", LH_type = i_spring))["mean",])[,i_spring,]
+phi_Mb_Ma_nor = array_format(post_summ(post, sub_index("^phi_Mb_Ma[year,LH_type,origin,pop]", year = observable, pop = ".+", LH_type = i_spring, origin = o_nor))["mean",])[,i_spring,o_nor,]
+phi_Mb_Ma_hor = array_format(post_summ(post, sub_index("^phi_Mb_Ma[year,LH_type,origin,pop]", year = observable, pop = ".+", LH_type = i_spring, origin = o_hor))["mean",])[,i_spring,o_hor,]
+phi_Ma_O0 = array_format(post_summ(post, sub_index("^phi_Ma_O0[year,origin]", year = observable, origin = ".+"))["mean",])
+phi_O0_O1_nor = array_format(post_summ(post, sub_index("^phi_O0_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_nor))["mean",])[,o_nor,]
+phi_O0_O1_hor = array_format(post_summ(post, sub_index("^phi_O0_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_hor))["mean",])[,o_hor,]
+phi_Rb_Ra = array_format(post_summ(post, sub_index("^phi_Rb_Ra[year,origin]", year = observable, origin = ".+"))["mean",])
 
-# draw the regression uncertainty
-polygon(x = c(wul_seq, rev(wul_seq)), y = c(pred_beta_summ["2.5%",], rev(pred_beta_summ["97.5%",])), border = NA, col = tranp_col)
-polygon(x = c(wul_seq, rev(wul_seq)), y = c(pred_beta_summ["10%",], rev(pred_beta_summ["90%",])), border = NA, col = tranp_col)
+# set MIN to NA for HOR values
+phi_Mb_Ma_hor[,j_min] = NA
+phi_O0_O1_hor[,j_min] = NA
 
-# draw the posterior mean regression line
-lines(pred_beta_summ["mean",] ~ wul_seq, lwd = 2, lty = 2, col = solid_col)
+mypar(mfrow = c(1,1), oma = c(1.5,1,0,1), col.axis = "black")
+layout(matrix(1:5, ncol = 1), height = c(1,1,1,0.5,1))
+f_horiz(ests1 = phi_E_Pb, ests2 = NULL, lim = c(0, 0.5), label = "(a) Egg \u2192 Parr")
 
-# draw the population-specific capacity estimates w/error bars and labels
-segments(jags_data$wul, beta_ests["2.5%",], jags_data$wul, beta_ests["97.5%",], col = solid_col)
-segments(jags_data$wul, beta_ests["10%",], jags_data$wul, beta_ests["90%",], col = solid_col, lwd = 3)
-points(beta_ests["mean",] ~ jags_data$wul, cex = 1.5, pch = 21, col = solid_col, bg = solid_col)
+f_horiz(ests1 = phi_Pa_Mb_fall, ests2 = phi_Pa_Mb_spring, lim = c(0,1), label = "(b) Parr \u2192 Smolt")
+legend_f("Mig. Type", "Fall", "Spring")
 
-# draw the population labels
-xoff = 0.015
-yoff = 0.03
-text(x = jags_data$wul      + xdiff * c(1.5,-1,1,1) * xoff,
-     y = beta_ests["mean",] + ydiff * c(1,-1,1,1) * yoff,
-     labels = c("CAT", "LOS", "MIN", "UGR"), pos = c(2,4,2,2), font = 1, cex = 0.8)
+f_horiz(ests1 = phi_Mb_Ma_nor, ests2 = phi_Mb_Ma_hor, lim = c(0,1), label = "(c) Smolt \u2192 LGR")
+legend_f("Origin", "NOR", "HOR")
 
-# add axis labels
-axis_labels("Weighted Usable Habitat Length (km)", "Parr Capacity (Thousands)")
+f_horiz(ests1 = phi_Ma_O0, ests2 = phi_Rb_Ra, lim = c(0,1), label = "(d) Mainstem")
+legend_f("Direction", "LGR \u2192 BON", "BON \u2192 LGR", "bottomleft")
+
+f_horiz(ests1 = phi_O0_O1_nor, ests2 = phi_O0_O1_hor, lim = c(0,0.4), label = "(e) Ocean-0 \u2192 Ocean-1")
+legend_f("Origin", "NOR", "HOR", "bottomright")
+axis_labels("Survival Probability")
 ```
 
 \newpage
+
+```{r apportion-compare-fig, fig.width = 3.4, fig.height = 8 * (3/4.5), fig.cap = msdown::prep_caption(apportion_compare_caption), time_it = TRUE, eval = params$apportion_compare_fig}
+
+# extract the posterior means to plot
+pi_fall = array_format(post_summ(post, sub_index("^pi[year,LH_type,pop]", year = observable, pop = ".+", LH_type = i_fall))["mean",])[,i_fall,]
+psi_O1_nor = array_format(post_summ(post, sub_index("^psi_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_nor))["mean",])[,o_nor,]
+psi_O1_hor = array_format(post_summ(post, sub_index("^psi_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_hor))["mean",])[,o_hor,]
+psi_O2_nor = array_format(post_summ(post, sub_index("^psi_O2[year,origin,pop]", year = observable, pop = ".+", origin = o_nor))["mean",])[,o_nor,]
+psi_O2_hor = array_format(post_summ(post, sub_index("^psi_O2[year,origin,pop]", year = observable, pop = ".+", origin = o_hor))["mean",])[,o_hor,]
+
+# set MIN to NA for HOR values
+psi_O1_hor[,j_min] = NA
+psi_O1_hor[,j_min] = NA
+
+mypar(mfrow = c(1,1), oma = c(1.5,1,0,1), col.axis = "black")
+layout(matrix(1:3, ncol = 1), height = c(1,1,1))
+f_horiz(ests1 = pi_fall, ests2 = NULL, lim = c(0, 0.6), label = "(a) Pr(Fall Migrant)")
+
+f_horiz(ests1 = psi_O1_nor, ests2 = psi_O1_hor, lim = c(0,0.4), label = "(b) Pr(Mature Age-3)")
+legend_f("Origin", "NOR", "HOR")
+
+f_horiz(ests1 = psi_O2_nor, ests2 = psi_O2_hor, lim = c(0,1), label = "(c) Pr(Mature Age-4)")
+legend_f("Origin", "NOR", "HOR", "bottomleft")
+
+axis_labels("Transition Probability (Non-Survival)")
+```
+
+\newpage
+
 
 ```{r relationship-fig, fig.width = 7.2, fig.height = 9, fig.cap = msdown::prep_caption(relationship_caption), time_it = TRUE, eval = params$relationship_fig}
 solid_col = "grey30"
@@ -688,6 +789,300 @@ junk = sapply(1:4, function(j) {
 
 \newpage
 
+```{r beta-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(beta_caption), time_it = TRUE, eval = params$beta_fig}
+# extract posterior summaries of the capacity parameters
+beta_ests = post_summ(post, "^beta[", probs = c(0.025, 0.1, 0.5, 0.9, 0.975))
+
+# extract posterior samples of the slope parameter
+beta_per = post_subset(post, "lambda", TRUE)
+
+# create a sequence of WUL values to predict capacity at
+wul_seq = seq(0, max(jags_data$wul) * 1.1, length = 30)
+
+# obtain the regression line for each posterior sample
+pred_beta = t(sapply(beta_per, function(slope) wul_seq * slope))
+
+# summarize posterior of regression line
+pred_beta_summ = apply(pred_beta, 2, function(x) c(mean = mean(x), quantile(x, c(0.025, 0.1, 0.5, 0.9, 0.975))))
+
+# empty plot with correct labeling/dimensions
+mypar(mfrow = c(1,1), col.axis = "black")
+plot(1,1, type = "n", xlim = range(wul_seq),
+     # ylim = c(0, max(beta_ests["97.5%",], pred_beta_summ["97.5%",])),
+     ylim = c(0, 3000) * 1000,
+     xlab = "",
+     ylab = "", yaxt = "n")
+
+# draw prettier y-axis
+at_y = c(0, 1000, 2000, 3000) * 1000
+axis(side = 2, at = at_y, labels = at_y/1000)
+usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
+
+# draw the regression uncertainty
+polygon(x = c(wul_seq, rev(wul_seq)), y = c(pred_beta_summ["2.5%",], rev(pred_beta_summ["97.5%",])), border = NA, col = tranp_col)
+polygon(x = c(wul_seq, rev(wul_seq)), y = c(pred_beta_summ["10%",], rev(pred_beta_summ["90%",])), border = NA, col = tranp_col)
+
+# draw the posterior mean regression line
+lines(pred_beta_summ["mean",] ~ wul_seq, lwd = 2, lty = 2, col = solid_col)
+
+# draw the population-specific capacity estimates w/error bars and labels
+segments(jags_data$wul, beta_ests["2.5%",], jags_data$wul, beta_ests["97.5%",], col = solid_col)
+segments(jags_data$wul, beta_ests["10%",], jags_data$wul, beta_ests["90%",], col = solid_col, lwd = 3)
+points(beta_ests["mean",] ~ jags_data$wul, cex = 1.5, pch = 21, col = solid_col, bg = solid_col)
+
+# draw the population labels
+xoff = 0.015
+yoff = 0.03
+text(x = jags_data$wul      + xdiff * c(1.5,-1,1,1) * xoff,
+     y = beta_ests["mean",] + ydiff * c(1,-1,1,1) * yoff,
+     labels = c("CAT", "LOS", "MIN", "UGR"), pos = c(2,4,2,2), font = 1, cex = 0.8)
+
+# add axis labels
+axis_labels("Weighted Usable Habitat Length (km)", "Parr Capacity (Thousands)")
+```
+
+\newpage
+
+```{r corr-compare-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(corr_compare_caption), eval = params$corr_compare_fig, time_it = TRUE}
+
+# get posterior summaries of the mean correlation across all pop pairs
+# for each process separately
+rho_params1 = match_params(post, "rho", type = "base_only")
+rho_params2 = match_params(post, "rho_.+_pr", type = "base_only")
+rho_params = rho_params1[!(rho_params1 %in% rho_params2)]
+
+# function to extract posterior summaries of the rho parameters for a given process
+f = function(p) {
+  x = rowMeans(post_subset(post, paste0("^", p, "["), matrix = TRUE))
+  c(mean = mean(x), sd = sd(x), quantile(x, c(0.025, 0.1, 0.25, 0.5, 0.75, 0.9, 0.975)))
+}
+
+# apply it and order
+rho_mean_out = t(sapply(rho_params, f))
+rho_mean_out = rho_mean_out[order(rho_mean_out[,"mean"]),]
+
+# assign names to the different rho parameters
+rho_labels = c(
+  "rho_Lphi_E_Pb" = "Egg \u2192 Parr",
+  "rho_Lphi_O0_O1" = "Ocean-0 \u2192 Ocean-1",
+  "rho_Lpsi_O1" = "Pr(Mature Age-3)",
+  "rho_Lpsi_O2" = "Pr(Mature Age-4)",
+  "rho_lDelta_L_Pb_Mb" = "\u0394 Mean Length",
+  "rho_Lphi_Mb_Ma" = "Smolt \u2192 LGR",
+  "rho_lL_Pb" = "Mean Parr Length",
+  "rho_Lphi_Pa_Mb" = "Parr \u2192 Smolt",
+  "rho_Lphi_Rb_Ra" = "BON \u2192 LGR",
+  "rho_Lpi" = "Pr(Fall Migrant)",
+  "rho_Lphi_Ma_O0" = "LGR \u2192 BON"
+)
+
+# set up empty plotting region
+mypar(mar = c(2.5,6,1,0.75), yaxs = "i", mfrow = c(1,1), oma = c(0,0,0,0), mgp = c(2,0.1,0), col.axis = "black", cex.axis = 0.75)
+mp = barplot(rho_mean_out[,"mean"], 
+             horiz = TRUE, xlim = c(-1,1),
+             names.arg = rho_labels[rownames(rho_mean_out)],
+             las = 1, col = "white", border = "white")
+usr = par("usr")
+
+box_upr = mp - rbind(diff(mp)/2, NA)
+box_lwr = mp + rbind(diff(mp)/2, NA)
+box_upr[nrow(box_upr),] = box_upr[nrow(box_upr)-1,] + diff(box_upr[1:2])
+box_lwr[nrow(box_lwr),] = box_lwr[nrow(box_upr)-1,] + diff(box_lwr[1:2])
+
+pop_rhos = function(param, at_mp) {
+  
+  # if the process is not one of the hydropower migration survival ones, do this
+  # those processes are correlated across origins, because all populations share the same values each year
+  if (!(param %in% c("rho_Lphi_Ma_O0", "rho_Lphi_Rb_Ra"))) {
+    x = post_summ(post, paste0(param, vcov_inds), probs = c(0.1, 0.25, 0.75, 0.9))
+    y = at_mp + runif(6, -0.3, 0.3)
+    points(y ~ x["mean",], pch = 21, col = solid_col, bg = tranp_col)
+  } 
+}
+abline(v = 0, lty = 1, lwd = 2, col = "grey")
+
+junk = sapply(1:nrow(mp), function(i) pop_rhos(rownames(rho_mean_out)[i], mp[i,]))
+segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 7, col = "white")
+segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = "white", lwd = 2)
+points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "white", lwd = 4)
+segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 6, col = "black")
+segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = "black")
+points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "black", lwd = 3)
+
+abline(h = mp + rbind(diff(mp)/2, NA), xpd = FALSE, col = "grey", lty = 2)
+# par(tcl = -7)
+# axis(side = 2, at = mp + rbind(diff(mp)/2, NA), col = "grey", line = NA, labels = FALSE, lty = 2)
+box(col = par("col.axis"))
+axis_labels(xlab = "Process Noise Correlation", xline = 1.25, outer = FALSE)
+```
+
+\newpage
+
+```{r WUL-change-fig, fig.width = 7.2, fig.height = 4.5, eval = params$WUL_change_fig, fig.cap = WUL_change_fig_caption, time_it = TRUE}
+
+prep_samples = function(j) {
+  
+  # the parameters needed to calucate process model expected values
+  the_params = c("alpha[pop]", "beta[pop]", "^lambda$",
+                 "omega0[pop]", "omega1[pop]", "mu_pi[1,pop]",
+                 "gamma0[1,pop]", "gamma1[1,pop]",
+                 "gamma0[2,pop]", "gamma1[2,pop]",
+                 "theta0[pop]", "theta1[pop]",
+                 "tau0[pop]", "tau1[pop]"
+  )
+  
+  # extract the posterior samples for all of these parameters for this population
+  the_samps = post_subset(post, sub_index(the_params, pop = j), matrix = TRUE)
+  
+  # handle the names
+  the_names = postpack:::drop_index(names(the_samps[1,]))
+  the_names[which(the_names == "gamma0")] = paste0("gamma0", c("_fall", "_spring"))
+  the_names[which(the_names == "gamma1")] = paste0("gamma1", c("_fall", "_spring"))
+  colnames(the_samps) = the_names
+  
+  return(the_samps)
+}
+
+prep_sample = function(the_samps, i, j) {
+  c(the_samps[i,],
+    WUL = unname(jags_data$wul[j]),
+    E_scale = unname(jags_data$E_scale),
+    L_Pb_scale = unname(jags_data$L_Pb_scale[j]),
+    L_Pb_center = unname(jags_data$L_Pb_center[j]),
+    L_Mb_scale = unname(jags_data$L_Mb_scale[j]),
+    L_Mb_center = unname(jags_data$L_Mb_center[j])
+    )
+}
+
+get_phi_hat = function(x, E, WUL_change = 0, start = "E") {
+  with(as.list(c(x, E = E, WUL_change = WUL_change)), {
+    beta_hat = lambda * WUL
+    
+    WUL_new = WUL * (1 + WUL_change)
+    beta_hat_new = lambda * WUL_new
+    beta_new = beta_hat_new * (beta/beta_hat)
+    
+    phi_E_Pb = 1/(1/alpha + E/beta_new)
+    Pb = E * phi_E_Pb
+    
+    L_Pb = exp(omega0 + omega1 * log((E/E_scale)/WUL_new))
+    L_Pb_star = (L_Pb - L_Pb_center)/L_Pb_scale
+    
+    Pa_fall = Pb * mu_pi
+    Pa_spring = Pb * (1 - mu_pi)
+    
+    phi_Pa_Mb_fall = plogis(gamma0_fall + gamma1_fall * L_Pb_star)
+    phi_Pa_Mb_spring = plogis(gamma0_spring + gamma1_spring * L_Pb_star)
+    
+    Mb_fall = Pa_fall * phi_Pa_Mb_fall
+    Mb_spring = Pa_spring * phi_Pa_Mb_spring
+    
+    Delta = exp(theta0 + theta1 * L_Pb_star)
+    
+    L_Mb = L_Pb * Delta
+    L_Mb_star = (L_Mb - L_Mb_center)/L_Mb_scale
+    
+    phi_Mb_Ma = plogis(tau0 + tau1 * L_Mb_star)
+    
+    Ma_fall = Mb_fall * phi_Mb_Ma
+    Ma_spring = Mb_spring * phi_Mb_Ma
+    Ma = Ma_fall + Ma_spring
+    
+    if (start == "E") out = Ma/E
+    if (start == "Pb") out = Pb/E
+    return(out)
+  })
+}
+
+get_phi_hat_post = function(j, E_pred, WUL_change = 0, start = "E") {
+  
+  the_samps = prep_samples(j = j)
+  
+  out = sapply(1:nrow(the_samps), function(i) {
+    x = prep_sample(the_samps, i = i, j = j)
+    sapply(E_pred, function(e) get_phi_hat(x, E = e, WUL_change = WUL_change, start = start))
+  })
+  
+  out = t(out)
+  colnames(out) = paste0("var", 1:ncol(out))
+  
+  postpack::post_convert(cbind(postpack:::id_mat(post), out))
+}
+
+get_phi_real_post = function(j, start = "E") {
+  
+  if (start == "E") start_param = "^E[.+,pop]"
+  if (start == "Pb") start_param = "^Pb[.+,pop]"
+  
+  Ma_fall = post_subset(post, sub_index("^Ma[.+,1,1,pop]", pop = j), matrix = TRUE)
+  Ma_spring = post_subset(post, sub_index("^Ma[.+,2,1,pop]", pop = j), matrix = TRUE)
+  start_out = post_subset(post, sub_index(start_param, pop = j), matrix = TRUE)
+  
+  phi = (Ma_fall + Ma_spring)/start_out
+  
+  colnames(phi) = paste0("var", 1:ncol(phi))
+  postpack::post_convert(cbind(postpack:::id_mat(post), phi))
+}
+
+plot_f = function(j, start, WUL_change) {
+  phi_real_post = get_phi_real_post(j = j, start = start)
+  phi_real = post_summ(phi_real_post, ".")
+  E_real = post_summ(post, sub_index("^E[.+,pop]", pop = j))
+  E_pred = seq(min(E_real["mean",]), max(E_real["mean",]), length = 30)
+  
+  phi_hat_post = get_phi_hat_post(j = j, E_pred, start = start)
+  phi_hat = post_summ(phi_hat_post, ".")
+  phi_hat_new_post = get_phi_hat_post(j = j, E_pred, WUL_change = WUL_change, start = start)
+  phi_hat_new = post_summ(phi_hat_new_post, ".")
+  
+  plot(phi_real["mean",] ~ E_real["mean",], type = "n",
+       ylim = make_lim(0, phi_hat[c("2.5%","97.5%"),],
+                phi_hat_new[c("2.5%","97.5%"),]),
+                # phi_real["mean",]),
+       # ylim = make_lim(0, ifelse(start == "E", 0.075, 0.3)),
+       xlim = c(0, max(E_real["mean",], E_pred)),
+       xaxt = "n")
+  
+  # points(phi_real["mean",] ~ E_real["mean",], pch = 21, 
+  #        col = "black", bg = scales::alpha("grey25", 0.25), cex = 0.8)
+  
+  polygon(x = c(E_pred, rev(E_pred)), 
+          y = c(phi_hat["2.5%",], rev(phi_hat["97.5%",])),
+          col = tranp_col, border = NA)
+  lines(phi_hat["mean",] ~ E_pred, lwd = 2)
+  lines(phi_hat["2.5%",] ~ E_pred)
+  lines(phi_hat["97.5%",] ~ E_pred)
+  
+  polygon(x = c(E_pred, rev(E_pred)), 
+          y = c(phi_hat_new["2.5%",], rev(phi_hat_new["97.5%",])),
+          col = tranp_col, border = NA)
+  lines(phi_hat_new["mean",] ~ E_pred, lwd = 2, lty = 2)
+  lines(phi_hat_new["2.5%",] ~ E_pred,  lty = 2)
+  lines(phi_hat_new["97.5%",] ~ E_pred, lty = 2)
+  at_x = axisTicks(par("usr")[1:2], log = FALSE)
+  axis(side = 1, at = at_x, labels = at_x/1e6)
+  panel_label(paste0("(", letters[ifelse(start == "E", 0, 3) + j], ") ", pops[j]))
+  
+  if (j == 1) {
+    if (start == "E") {
+      axis_labels(ylab = "Egg \u2192 LGR Survival", outer = FALSE, yline = 1)
+      legend("topright", title = "WUL", legend = c("Current", paste0("\u2191", WUL_change * 100, "%")), lty = c(1,2), seg.len = 1.5, bty = "n", cex = 0.8)
+    } 
+    if (start == "Pb") axis_labels(ylab = "Parr \u2192 LGR Survival", outer = FALSE, yline = 1)
+  }
+  
+  
+  
+}
+
+mypar(mfrow = c(2,4), col.axis = "black")
+junk = sapply(1:4, function(j) plot_f(j, "E", 1))
+junk = sapply(1:4, function(j) plot_f(j, "Pb", 1))
+axis_labels(xlab = "Egg Production (Millions)")
+```
+
+\newpage
+
 ```{r no-fall-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(no_fall_caption), time_it = TRUE, eval = params$no_fall_fig}
 cv = function(x) {sd(x, na.rm = TRUE)/mean(x, na.rm = TRUE)}
 
@@ -770,226 +1165,6 @@ abline(h = 1, lty = 2)
 # draw a legend
 legend("topright", title = "LGR Smolt", legend = c("Mean", "CV"), pch = 15,
        col = cols, pt.cex = 1.5, bty = "n", text.col = par("col.axis"), cex = 0.8)
-```
-
-\newpage
-
-```{r compare-fn, eval = params$surv_compare_fig | params$apportion_compare_fig}
-pch = c(21, 23)
-
-cex_main = 2.5
-cex_sub = 1.1
-
-solid_col = "grey40"
-tranp_col = alpha(solid_col, 0.25)
-
-f_horiz = function(ests1, ests2, lim, label) {
-  # prepare the first group of estimates
-  ests1 = ests1[-1,]; x1 = colMeans(ests1)
-  
-  # figure out the correct axis labels
-  if (ncol(ests1) == 4) tick_labels = pops else tick_labels = c("NOR", "HOR")
-  jitter = runif(nrow(ests1), -0.25, 0.25)
-  
-  if (is.null(ests2)) {
-    # empty barplot with correct dimensions
-    mp = barplot(x1, col = "white", border = "white", xlim = lim, ylim = c(ncol(ests1) + 0.5, 0.05), horiz = TRUE)
-    
-    # figure out location of jittered points
-    mp_all = t(sapply(1:nrow(ests1), function(i) mp))
-    mp_all = apply(mp_all, 2, function(x) x + jitter)
-    
-    # draw year-specific estimates
-    points(ests1, mp_all, col = solid_col, bg = tranp_col, pch = pch[1], cex = cex_sub)
-    
-    # draw year averages
-    points(x1, mp, pch = pch[1], col = "white", bg = "black", cex = cex_main, lwd = 1.5)
-    
-    # draw axis
-    omgp = par("mgp"); nmgp = omgp; nmgp[2] = 0.15
-    par(mgp = nmgp)
-    usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
-    segments(usr[1], usr[3], usr[1], usr[4], xpd = TRUE, col = par("col.axis"))
-    axis(side = 2, at = mp, labels = tick_labels, las = 1)
-    par(mgp = omgp)
-    
-  } else {
-    # prepare the second group of estimates if supplied
-    ests2 = ests2[-1,]; x2 = colMeans(ests2)
-    
-    # empty barplot with correct dimensions
-    mp = barplot(rbind(x1, x2), beside = TRUE, space = c(0.25,1), col = "white", border = "white", xlim = lim, ylim = c(ncol(ests1) * 3 + 1, 0.15), horiz = TRUE)
-    mp1 = mp[1,]; mp2 = mp[2,]
-    
-    # figure out location of jittered points
-    mp1_all = t(sapply(1:nrow(ests1), function(i) mp1))
-    mp1_all = apply(mp1_all, 2, function(x) x + jitter)
-    mp2_all = t(sapply(1:nrow(ests2), function(i) mp2))
-    mp2_all = apply(mp2_all, 2, function(x) x + jitter)
-    
-    # draw year-specific estimates
-    points(ests1, mp1_all, col = solid_col, bg = tranp_col, pch = pch[1], cex = cex_sub)
-    points(ests2, mp2_all, col = solid_col, bg = tranp_col, pch = pch[2], cex = cex_sub)
-    
-    # draw year averages
-    points(x1, mp1, pch = pch[1], cex = cex_main, bg = "black", col = "white", lwd = 1.5)
-    points(x2, mp2, pch = pch[2], cex = cex_main, bg = "black", col = "white", lwd = 1.5)
-    
-    # draw axis
-    omgp = par("mgp"); nmgp = omgp; nmgp[2] = 0.15
-    par(mgp = nmgp)
-    usr = par("usr"); xdiff = diff(usr[1:2]); ydiff = diff(usr[3:4])
-    segments(usr[1], usr[3], usr[1], usr[4], xpd = TRUE, col = par("col.axis"))
-    axis(side = 2, at = (mp1 + mp2)/2, labels = tick_labels, las = 1)
-    par(mpg = omgp)
-  }
-  
-  # draw panel label
-  panel_label(label, y_inp = ifelse(ncol(ests1) == 4, 0.05, 0.1), cex = 1.2)
-}
-
-legend_f = function(title, grp1, grp2, loc = "topright") {
-  legend(loc, title = title, legend = c(grp1, grp2), pch = pch, pt.cex = 1.3, cex = 0.9, bty = "n",
-         text.col = par("col.axis"), col = "black", pt.bg = "black")
-}
-```
-
-```{r surv-compare-fig, fig.width = 3.4, fig.height = 8, fig.cap = msdown::prep_caption(surv_compare_caption), time_it = TRUE, eval = params$surv_compare_fig}
-
-# extract the posterior means to plot
-phi_E_Pb = array_format(post_summ(post, sub_index("^phi_E_Pb[year,pop]", year = observable, pop = ".+"))["mean",])
-phi_Pa_Mb_fall = array_format(post_summ(post, sub_index("^phi_Pa_Mb[year,LH_type,pop]", year = observable, pop = ".+", LH_type = i_fall))["mean",])[,i_fall,]
-phi_Pa_Mb_spring = array_format(post_summ(post, sub_index("^phi_Pa_Mb[year,LH_type,pop]", year = observable, pop = ".+", LH_type = i_spring))["mean",])[,i_spring,]
-phi_Mb_Ma_nor = array_format(post_summ(post, sub_index("^phi_Mb_Ma[year,LH_type,origin,pop]", year = observable, pop = ".+", LH_type = i_spring, origin = o_nor))["mean",])[,i_spring,o_nor,]
-phi_Mb_Ma_hor = array_format(post_summ(post, sub_index("^phi_Mb_Ma[year,LH_type,origin,pop]", year = observable, pop = ".+", LH_type = i_spring, origin = o_hor))["mean",])[,i_spring,o_hor,]
-phi_Ma_O0 = array_format(post_summ(post, sub_index("^phi_Ma_O0[year,origin]", year = observable, origin = ".+"))["mean",])
-phi_O0_O1_nor = array_format(post_summ(post, sub_index("^phi_O0_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_nor))["mean",])[,o_nor,]
-phi_O0_O1_hor = array_format(post_summ(post, sub_index("^phi_O0_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_hor))["mean",])[,o_hor,]
-phi_Rb_Ra = array_format(post_summ(post, sub_index("^phi_Rb_Ra[year,origin]", year = observable, origin = ".+"))["mean",])
-
-# set MIN to NA for HOR values
-phi_Mb_Ma_hor[,j_min] = NA
-phi_O0_O1_hor[,j_min] = NA
-
-mypar(mfrow = c(1,1), oma = c(1.5,1,0,1), col.axis = "black")
-layout(matrix(1:5, ncol = 1), height = c(1,1,1,0.5,1))
-f_horiz(ests1 = phi_E_Pb, ests2 = NULL, lim = c(0, 0.5), label = "(a) Egg \u2192 Parr")
-
-f_horiz(ests1 = phi_Pa_Mb_fall, ests2 = phi_Pa_Mb_spring, lim = c(0,1), label = "(b) Parr \u2192 Smolt")
-legend_f("Mig. Type", "Fall", "Spring")
-
-f_horiz(ests1 = phi_Mb_Ma_nor, ests2 = phi_Mb_Ma_hor, lim = c(0,1), label = "(c) Smolt \u2192 LGR")
-legend_f("Origin", "NOR", "HOR")
-
-f_horiz(ests1 = phi_Ma_O0, ests2 = phi_Rb_Ra, lim = c(0,1), label = "(d) Mainstem")
-legend_f("Direction", "LGR \u2192 BON", "BON \u2192 LGR", "bottomleft")
-
-f_horiz(ests1 = phi_O0_O1_nor, ests2 = phi_O0_O1_hor, lim = c(0,0.4), label = "(e) Ocean-0 \u2192 Ocean-1")
-legend_f("Origin", "NOR", "HOR", "bottomright")
-axis_labels("Survival Probability")
-```
-
-\newpage
-
-```{r apportion-compare-fig, fig.width = 3.4, fig.height = 8 * (3/4.5), fig.cap = msdown::prep_caption(apportion_compare_caption), time_it = TRUE, eval = params$apportion_compare_fig}
-
-# extract the posterior means to plot
-pi_fall = array_format(post_summ(post, sub_index("^pi[year,LH_type,pop]", year = observable, pop = ".+", LH_type = i_fall))["mean",])[,i_fall,]
-psi_O1_nor = array_format(post_summ(post, sub_index("^psi_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_nor))["mean",])[,o_nor,]
-psi_O1_hor = array_format(post_summ(post, sub_index("^psi_O1[year,origin,pop]", year = observable, pop = ".+", origin = o_hor))["mean",])[,o_hor,]
-psi_O2_nor = array_format(post_summ(post, sub_index("^psi_O2[year,origin,pop]", year = observable, pop = ".+", origin = o_nor))["mean",])[,o_nor,]
-psi_O2_hor = array_format(post_summ(post, sub_index("^psi_O2[year,origin,pop]", year = observable, pop = ".+", origin = o_hor))["mean",])[,o_hor,]
-
-# set MIN to NA for HOR values
-psi_O1_hor[,j_min] = NA
-psi_O1_hor[,j_min] = NA
-
-mypar(mfrow = c(1,1), oma = c(1.5,1,0,1), col.axis = "black")
-layout(matrix(1:3, ncol = 1), height = c(1,1,1))
-f_horiz(ests1 = pi_fall, ests2 = NULL, lim = c(0, 0.6), label = "(a) Pr(Fall Migrant)")
-
-f_horiz(ests1 = psi_O1_nor, ests2 = psi_O1_hor, lim = c(0,0.4), label = "(b) Pr(Mature Age-3)")
-legend_f("Origin", "NOR", "HOR")
-
-f_horiz(ests1 = psi_O2_nor, ests2 = psi_O2_hor, lim = c(0,1), label = "(c) Pr(Mature Age-4)")
-legend_f("Origin", "NOR", "HOR", "bottomleft")
-
-axis_labels("Transition Probability (Non-Survival)")
-```
-
-\newpage
-
-```{r corr-compare-fig, fig.width = 3.4, fig.height = 3.4, fig.cap = msdown::prep_caption(corr_compare_caption), eval = params$corr_compare_fig}
-
-# get posterior summaries of the mean correlation across all pop pairs
-# for each process separately
-rho_params1 = match_params(post, "rho", type = "base_only")
-rho_params2 = match_params(post, "rho_.+_pr", type = "base_only")
-rho_params = rho_params1[!(rho_params1 %in% rho_params2)]
-
-# function to extract posterior summaries of the rho parameters for a given process
-f = function(p) {
-  x = rowMeans(post_subset(post, paste0("^", p, "["), matrix = TRUE))
-  c(mean = mean(x), sd = sd(x), quantile(x, c(0.025, 0.1, 0.25, 0.5, 0.75, 0.9, 0.975)))
-}
-
-# apply it and order
-rho_mean_out = t(sapply(rho_params, f))
-rho_mean_out = rho_mean_out[order(rho_mean_out[,"mean"]),]
-
-# assign names to the different rho parameters
-rho_labels = c(
-  "rho_Lphi_E_Pb" = "Egg \u2192 Parr",
-  "rho_Lphi_O0_O1" = "Ocean-0 \u2192 Ocean-1",
-  "rho_Lpsi_O1" = "Pr(Mature Age-3)",
-  "rho_Lpsi_O2" = "Pr(Mature Age-4)",
-  "rho_lDelta_L_Pb_Mb" = "\u0394 Mean Length",
-  "rho_Lphi_Mb_Ma" = "Smolt \u2192 LGR",
-  "rho_lL_Pb" = "Mean Parr Length",
-  "rho_Lphi_Pa_Mb" = "Parr \u2192 Smolt",
-  "rho_Lphi_Rb_Ra" = "BON \u2192 LGR",
-  "rho_Lpi" = "Pr(Fall Migrant)",
-  "rho_Lphi_Ma_O0" = "LGR \u2192 BON"
-)
-
-# set up empty plotting region
-mypar(mar = c(2.5,6,1,0.75), yaxs = "i", mfrow = c(1,1), oma = c(0,0,0,0), mgp = c(2,0.1,0), col.axis = "black", cex.axis = 0.75)
-mp = barplot(rho_mean_out[,"mean"], 
-             horiz = TRUE, xlim = c(-1,1),
-             names.arg = rho_labels[rownames(rho_mean_out)],
-             las = 1, col = "white", border = "white")
-usr = par("usr")
-
-box_upr = mp - rbind(diff(mp)/2, NA)
-box_lwr = mp + rbind(diff(mp)/2, NA)
-box_upr[nrow(box_upr),] = box_upr[nrow(box_upr)-1,] + diff(box_upr[1:2])
-box_lwr[nrow(box_lwr),] = box_lwr[nrow(box_upr)-1,] + diff(box_lwr[1:2])
-
-pop_rhos = function(param, at_mp) {
-  
-  # if the process is not one of the hydropower migration survival ones, do this
-  # those processes are correlated across origins, because all populations share the same values each year
-  if (!(param %in% c("rho_Lphi_Ma_O0", "rho_Lphi_Rb_Ra"))) {
-    x = post_summ(post, paste0(param, vcov_inds), probs = c(0.1, 0.25, 0.75, 0.9))
-    y = at_mp + runif(6, -0.3, 0.3)
-    points(y ~ x["mean",], pch = 21, col = solid_col, bg = tranp_col)
-  } 
-}
-abline(v = 0, lty = 1, lwd = 2, col = "grey")
-
-junk = sapply(1:nrow(mp), function(i) pop_rhos(rownames(rho_mean_out)[i], mp[i,]))
-segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 7, col = "white")
-segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = "white", lwd = 2)
-points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "white", lwd = 4)
-segments(rho_mean_out[,"25%"], mp, rho_mean_out[,"75%"], mp, lwd = 6, col = "black")
-segments(rho_mean_out[,"2.5%"], mp, rho_mean_out[,"97.5%"], mp, col = "black")
-points(mp ~ rho_mean_out[,"mean"], pch = 3, cex = 1, col = "black", lwd = 3)
-
-abline(h = mp + rbind(diff(mp)/2, NA), xpd = FALSE, col = "grey", lty = 2)
-# par(tcl = -7)
-# axis(side = 2, at = mp + rbind(diff(mp)/2, NA), col = "grey", line = NA, labels = FALSE, lty = 2)
-box(col = par("col.axis"))
-axis_labels(xlab = "Process Noise Correlation", xline = 1.25, outer = FALSE)
 ```
 
 \clearpage
